# OCR_RnD

./: .gitignore  CLAUDE.md  data_requirements.md
hybrid/: AGENT.md  CHANGELOG.md  README.md  architecture.md  implementation-plan.md  pyproject.toml
hybrid/config/: default.yaml  engines.yaml
hybrid/docs/2026-06-08/end-to-end-pipeline/: plan.md
hybrid/docs/2026-06-09/baseline-eval-analysis/: notes.md
hybrid/docs/2026-06-10/v2-modular-layout-pipeline/: design.md  plan.md
hybrid/results/resources/: 20260608_025940_snapshot-check.report.md  20260608_025940_snapshot-check.samples.csv  INDEX.md
hybrid/results/runs/2026-06-08_0357_hybrid-qwen3vl/: eval_config.yaml  latency.json  meta.json  summary.md
hybrid/results/runs/2026-06-08_0511_hybrid-qwen3vl/: eval_config.yaml  gt_subset.json  latency.json  meta.json  summary.md
hybrid/results/runs/2026-06-08_0614_hybrid-qwen3vl/: eval_config.yaml  latency.json  meta.json  summary.md
hybrid/results/sample_md/: README.md  page1.md  page2.md  page3.md  page4.md  page5.md  page6.md  page7.md  page8.md  page9.md
hybrid/scripts/: eval_run.py  make_sample.py  parse_one.py  resummarize.py  run_omnidocbench.py  run_v2.py
hybrid/src/idp/: __init__.py  batch.py  pipeline.py  pipeline_v2.py  schemas.py
hybrid/src/idp/api/: app.py
hybrid/src/idp/classify/: router.py
hybrid/src/idp/extract/: base.py  tier0_direct.py  tier_b_lmstudio_vlm.py
hybrid/src/idp/ingest/: loader.py
hybrid/src/idp/layout/: __init__.py  base.py  ppstructure_layout.py
hybrid/tests/: test_router.py  test_schemas.py  test_tier0.py
(+216 files in other folders)
