[project]
name = "idp-hybrid"
version = "0.1.0"
description = "Hybrid tiered IDP pipeline — Tier 0 (PyMuPDF) + Tier B (Qwen3-VL @ LM Studio), eval on OmniDocBench v1.5"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.7",
    "pymupdf>=1.24",
    "pdfplumber>=0.11",
    "pillow>=10.3",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/idp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
